--- a/Zbang.Cloudents.Connect/packages.config
+++ b/Zbang.Cloudents.Connect/packages.config
@@ -5,7 +5,7 @@
   <package id="Autofac.Owin" version="4.0.0" targetFramework="net451" />
   <package id="Autofac.SignalR" version="3.0.2" targetFramework="net451" />
   <package id="jQuery" version="2.2.4" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net451" requireReinstallation="true" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.7" targetFramework="net451" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net451" />
   <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.2.0" targetFramework="net451" />
