--- a/Zbang.Zbox.Infrastructure.Ai/packages.config
+++ b/Zbang.Zbox.Infrastructure.Ai/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="Microsoft.Cognitive.LUIS" version="1.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
-  <package id="RestSharp" version="105.2.3" targetFramework="net451" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net451" requireReinstallation="true" />
 </packages>
