--- a/Zbang.Zbox.WorkerRoleSearch/packages.config
+++ b/Zbang.Zbox.WorkerRoleSearch/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="Autofac" version="4.2.1" targetFramework="net451" />
   <package id="Hyak.Common" version="1.0.2" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net451" requireReinstallation="true" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.7" targetFramework="net451" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net451" />
   <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.2.0" targetFramework="net451" />
