--- a/Testing/packages.config
+++ b/Testing/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AlchemyAPIClient" version="1.5.1608.252" targetFramework="net451" />
   <package id="Autofac" version="4.2.1" targetFramework="net451" />
   <package id="Dapper" version="1.50.2" targetFramework="net451" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net45" />
