--- a/Zbang.Cloudents.MobileApp/packages.config
+++ b/Zbang.Cloudents.MobileApp/packages.config
@@ -7,7 +7,7 @@
   <package id="Autofac.WebApi2.Owin" version="4.0.0" targetFramework="net451" />
   <package id="AutoMapper" version="3.3.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
-  <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net451" requireReinstallation="true" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.7" targetFramework="net451" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net451" />
   <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.2.0" targetFramework="net451" />
