--- a/Zbang.Cloudents.Mvc4WebRole/packages.config
+++ b/Zbang.Cloudents.Mvc4WebRole/packages.config
@@ -27,7 +27,7 @@
   <package id="jquery.TypeScript.DefinitelyTyped" version="3.1.2" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.15.0" targetFramework="net451" />
   <package id="log4net" version="2.0.5" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net451" requireReinstallation="true" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.7" targetFramework="net451" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net451" />
   <package id="Microsoft.ApplicationInsights.Log4NetAppender" version="2.2.0" targetFramework="net451" />
