--- a/Zbang.Zbox.Infrastructure.Mail/packages.config
+++ b/Zbang.Zbox.Infrastructure.Mail/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
-  <package id="RestSharp" version="105.2.3" targetFramework="net451" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net451" requireReinstallation="true" />
   <package id="Sendgrid" version="6.3.4" targetFramework="net451" />
   <package id="SendGrid.SmtpApi" version="1.3.1" targetFramework="net451" />
 </packages>
