--- a/Zbang.Zbox.Infrastructure.Notification/Zbang.Zbox.Infrastructure.Notifications.csproj
+++ b/Zbang.Zbox.Infrastructure.Notification/Zbang.Zbox.Infrastructure.Notifications.csproj
@@ -9,10 +9,11 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Zbang.Zbox.Infrastructure.Notifications</RootNamespace>
     <AssemblyName>Zbang.Zbox.Infrastructure.Notifications</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
