--- a/Zbang.Zbox.Domain.Services/Zbang.Zbox.Domain.Services.csproj
+++ b/Zbang.Zbox.Domain.Services/Zbang.Zbox.Domain.Services.csproj
@@ -53,6 +53,10 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=4.2.1.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.4.2.1\lib\net45\Autofac.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Dapper, Version=1.50.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Dapper.1.50.2\lib\net451\Dapper.dll</HintPath>
       <Private>True</Private>
@@ -76,7 +80,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="RegisterIoc.cs" />
+    <Compile Include="WriteServiceModule.cs" />
     <Compile Include="ZboxWriteService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ZboxWorkerRoleService.cs" />
