--- a/Zbang.Zbox.Infrastructure.Ai/Zbang.Zbox.Infrastructure.Ai.csproj
+++ b/Zbang.Zbox.Infrastructure.Ai/Zbang.Zbox.Infrastructure.Ai.csproj
@@ -31,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=4.2.1.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.4.2.1\lib\net45\Autofac.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Cognitive.LUIS, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Cognitive.LUIS.1.0.0\lib\portable45-net45+win8+wpa81\Microsoft.Cognitive.LUIS.dll</HintPath>
       <Private>True</Private>
@@ -59,7 +63,7 @@
     <Compile Include="IWitAi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuestionIntent.cs" />
-    <Compile Include="RegisterIoc.cs" />
+    <Compile Include="AiModule.cs" />
     <Compile Include="SearchIntent.cs" />
     <Compile Include="WitAi.cs" />
     <Compile Include="WitApiName.cs" />
