--- a/Zbang.Zbox.Infrastructure.Azure/Zbang.Zbox.Infrastructure.Azure.csproj
+++ b/Zbang.Zbox.Infrastructure.Azure/Zbang.Zbox.Infrastructure.Azure.csproj
@@ -35,6 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=4.2.1.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.4.2.1\lib\net45\Autofac.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Azure.KeyVault.Core, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Azure.KeyVault.Core.1.0.0\lib\net40\Microsoft.Azure.KeyVault.Core.dll</HintPath>
       <Private>True</Private>
@@ -115,7 +119,7 @@
     <Compile Include="Entities\FlagCommentOrReply.cs" />
     <Compile Include="Entities\FlagItem.cs" />
     <Compile Include="GlobalSuppressions.cs" />
-    <Compile Include="Ioc\RegisterIoc.cs" />
+    <Compile Include="StorageModule.cs" />
     <Compile Include="ITableProvider.cs" />
     <Compile Include="MediaServices\MediaSevicesProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
