--- a/Zbang.Zbox.Infrastructure.Azure/packages.config
+++ b/Zbang.Zbox.Infrastructure.Azure/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="4.2.1" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net451" />
   <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net451" />
