--- a/Zbang.Zbox.Infrastructure.Search/packages.config
+++ b/Zbang.Zbox.Infrastructure.Search/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="4.2.1" targetFramework="net462" />
   <package id="Microsoft.Azure.Search" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.4" targetFramework="net451" />
   <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.4" targetFramework="net451" />
