--- a/Zbang.Zbox.Domain.DataAccess/packages.config
+++ b/Zbang.Zbox.Domain.DataAccess/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="4.2.1" targetFramework="net462" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net45" />
   <package id="NHibernate" version="4.1.0.4000" targetFramework="net451" />
 </packages>
