--- a/Zbang.Zbox.Infrastructure/Zbang.Zbox.Infrastructure.csproj
+++ b/Zbang.Zbox.Infrastructure/Zbang.Zbox.Infrastructure.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Range.cs" />
     <Compile Include="RegisterIoc.cs" />
     <Compile Include="Repositories\IDirty.cs" />
+    <Compile Include="Repositories\IDocumentDbRepository.cs" />
     <Compile Include="Repositories\ISoftDelete.cs" />
     <Compile Include="Security\FacebookAuthenticationService.cs" />
     <Compile Include="Security\FacebookUserData.cs" />
