--- a/Zbang.Cloudents.Mvc4WebRole/Web.config
+++ b/Zbang.Cloudents.Mvc4WebRole/Web.config
@@ -62,7 +62,7 @@
     <!--Media services-->
     <add key="accountName" value="zboxmediaservices" />
     <add key="accountKey" value="S52DSdcZS2Bhgr7Ofg5rGtBKByR4eVZDkpx8fOXmi2I=" />
-    <add key="CacheUse" value="true" />
+    <add key="CacheUse" value="false" />
     <add key="StorageCdnEndpoint" value="" />
     <add key="AzureSearchKey" value="5B0433BFBBE625C9D60F7330CFF103F0" />
     <add key="AzureSeachServiceName" value="cloudents" />
