--- a/Zbang.Zbox.DomainNew/Zbang.Zbox.Domain.csproj
+++ b/Zbang.Zbox.DomainNew/Zbang.Zbox.Domain.csproj
@@ -72,6 +72,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Connection.cs" />
+    <Compile Include="CourseTag.cs" />
     <Compile Include="Flashcard.cs" />
     <Compile Include="FlashcardLike.cs" />
     <Compile Include="FlashcardMeta.cs" />
@@ -212,6 +213,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Mappings\Gamification.hbm.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Mappings\Jared.hbm.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
