--- a/Zbang.Zbox.Domain.Commands/Zbang.Zbox.Domain.Commands.csproj
+++ b/Zbang.Zbox.Domain.Commands/Zbang.Zbox.Domain.Commands.csproj
@@ -74,6 +74,7 @@
     <Compile Include="AddStudentCommand.cs" />
     <Compile Include="AddUserLocationActivityCommand.cs" />
     <Compile Include="AssignItemToTabCommand.cs" />
+    <Compile Include="AssignTagsToItemCommand.cs" />
     <Compile Include="ChangeBoxInfoCommand.cs" />
     <Compile Include="ChangeBoxLibraryCommand.cs" />
     <Compile Include="ChangeFileNameCommand.cs" />
@@ -133,6 +134,7 @@
     <Compile Include="UnsubscribeUsersFromEmailCommand.cs" />
     <Compile Include="UpdateBadgesCommand.cs" />
     <Compile Include="UpdateFlashcardCommand.cs" />
+    <Compile Include="UpdateItemCourseTagCommand.cs" />
     <Compile Include="UpdateNodeSettingsCommand.cs" />
     <Compile Include="UnFollowBoxCommand.cs" />
     <Compile Include="UpdateDirtyToRegularCommand.cs" />
