--- a/Zbang.Zbox.Infrastructure.File/Zbang.Zbox.Infrastructure.File.csproj
+++ b/Zbang.Zbox.Infrastructure.File/Zbang.Zbox.Infrastructure.File.csproj
@@ -62,6 +62,10 @@
       <HintPath>..\packages\ImageResizer.4.0.4\lib\net45\ImageResizer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="SimMetrics, Version=1.1.4118.23231, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SimMetrics.1.1.4118.23231\lib\SimMetrics.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
