--- a/Zbang.Zbox.WorkerRoleSearch/packages.config
+++ b/Zbang.Zbox.WorkerRoleSearch/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AlchemyAPIClient" version="1.5.1608.252" targetFramework="net462" />
   <package id="Autofac" version="4.2.1" targetFramework="net451" />
   <package id="Hyak.Common" version="1.0.2" targetFramework="net451" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net451" requireReinstallation="true" />
