--- a/Zbang.Zbox.DomainNew/Zbang.Zbox.Domain.csproj
+++ b/Zbang.Zbox.DomainNew/Zbang.Zbox.Domain.csproj
@@ -78,6 +78,7 @@
     <Compile Include="FlashcardMeta.cs" />
     <Compile Include="FlashcardPin.cs" />
     <Compile Include="FlashcardSolve.cs" />
+    <Compile Include="IItem.cs" />
     <Compile Include="QuizLike.cs" />
     <Compile Include="EqualityAndHashCodeProvider.cs" />
     <Compile Include="File.cs" />
