--- a/Zbang.Zbox.Infrastructure.Ai/Zbang.Zbox.Infrastructure.Ai.csproj
+++ b/Zbang.Zbox.Infrastructure.Ai/Zbang.Zbox.Infrastructure.Ai.csproj
@@ -35,10 +35,6 @@
       <HintPath>..\packages\Autofac.4.2.1\lib\net45\Autofac.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Microsoft.Cognitive.LUIS, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.Cognitive.LUIS.1.0.0\lib\portable45-net45+win8+wpa81\Microsoft.Cognitive.LUIS.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -58,17 +54,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseIntent.cs" />
-    <Compile Include="IAi.cs" />
     <Compile Include="IIntent.cs" />
     <Compile Include="IWitAi.cs" />
+    <Compile Include="JsonCreationConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuestionIntent.cs" />
     <Compile Include="AiModule.cs" />
     <Compile Include="SearchIntent.cs" />
     <Compile Include="WitAi.cs" />
-    <Compile Include="WitApiName.cs" />
     <Compile Include="WitClient.cs" />
-    <Compile Include="WitResponse.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
