--- a/Zbang.Zbox.Infrastructure.Ai/Zbang.Zbox.Infrastructure.Ai.csproj
+++ b/Zbang.Zbox.Infrastructure.Ai/Zbang.Zbox.Infrastructure.Ai.csproj
@@ -54,12 +54,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseIntent.cs" />
-    <Compile Include="IIntent.cs" />
+    <Compile Include="DontUnderstandIntent.cs" />
     <Compile Include="IWitAi.cs" />
     <Compile Include="JsonCreationConverter.cs" />
+    <Compile Include="KnownIntent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuestionIntent.cs" />
     <Compile Include="AiModule.cs" />
+    <Compile Include="SearchAllDocuments.cs" />
+    <Compile Include="SearchDocumentIntent.cs" />
+    <Compile Include="SearchHomework.cs" />
     <Compile Include="SearchIntent.cs" />
     <Compile Include="WitAi.cs" />
     <Compile Include="WitClient.cs" />
