--- a/Zbang.Cloudents.MobileApp/Zbang.Cloudents.MobileApp.csproj
+++ b/Zbang.Cloudents.MobileApp/Zbang.Cloudents.MobileApp.csproj
@@ -414,6 +414,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="Properties\PublishProfiles\spitball - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\spitballtest - Web Deploy %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\spitballtest - Web Deploy.pubxml" />
     <Content Include="Service References\Application Insights\ConnectedService.json" />
   </ItemGroup>
