--- a/Zbang.Zbox.WorkerRoleSearch/Zbang.Zbox.WorkerRoleSearch.csproj
+++ b/Zbang.Zbox.WorkerRoleSearch/Zbang.Zbox.WorkerRoleSearch.csproj
@@ -214,6 +214,7 @@
     <Compile Include="UpdateUnsubscribeList.cs" />
     <Compile Include="WatsonExtract.cs" />
     <Compile Include="WorkerRole.cs" />
+    <Compile Include="WorkerRoleModule.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
