--- a/Zbang.Cloudents.Jared/packages.config
+++ b/Zbang.Cloudents.Jared/packages.config
@@ -21,6 +21,7 @@
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net462" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="Strathweb.CacheOutput.WebApi2" version="0.10.0" targetFramework="net462" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.205111437" targetFramework="net45" />
   <package id="System.Spatial" version="5.7.0" targetFramework="net462" />
 </packages>
