--- a/Zbang.Cloudents.Jared/packages.config
+++ b/Zbang.Cloudents.Jared/packages.config
@@ -11,6 +11,7 @@
   <package id="Microsoft.Azure.Mobile.Server" version="1.1.157.1" targetFramework="net45" />
   <package id="Microsoft.Azure.Mobile.Server.Authentication" version="1.1.157.1" targetFramework="net45" />
   <package id="Microsoft.Azure.Mobile.Server.Home" version="1.1.157.1" targetFramework="net45" />
+  <package id="Microsoft.Azure.Mobile.Server.Login" version="2.0.0" targetFramework="net462" />
   <package id="Microsoft.Azure.Mobile.Server.Notifications" version="1.1.157.1" targetFramework="net45" />
   <package id="Microsoft.Azure.NotificationHubs" version="1.0.7" targetFramework="net462" />
   <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net462" />
@@ -22,6 +23,6 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net462" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Strathweb.CacheOutput.WebApi2" version="0.10.0" targetFramework="net462" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.205111437" targetFramework="net45" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.3.308261200" targetFramework="net462" />
   <package id="System.Spatial" version="5.7.0" targetFramework="net462" />
 </packages>
